; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_reflog.c_test_refs_reflog_reflog__deleting_the_reference_deletes_the_reflog.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_reflog.c_test_refs_reflog_reflog__deleting_the_reference_deletes_the_reflog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@GIT_REFLOG_DIR = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_reflog_reflog__deleting_the_reference_deletes_the_reflog() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* @g_repo, align 4
  %5 = call i32 @git_repository_path(i32 %4)
  %6 = load i8*, i8** @GIT_REFLOG_DIR, align 8
  %7 = call i32 @git_buf_joinpath(i32* %2, i32 %5, i8* %6)
  %8 = call i32 @git_buf_cstr(i32* %2)
  %9 = call i32 @git_buf_joinpath(i32* %2, i32 %8, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @git_buf_cstr(i32* %2)
  %11 = call i32 @git_path_isfile(i32 %10)
  %12 = call i32 @cl_assert_equal_i(i32 1, i32 %11)
  %13 = load i32, i32* @g_repo, align 4
  %14 = call i32 @git_reference_lookup(i32** %1, i32 %13, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 @cl_git_pass(i32 %14)
  %16 = load i32*, i32** %1, align 8
  %17 = call i32 @git_reference_delete(i32* %16)
  %18 = call i32 @cl_git_pass(i32 %17)
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @git_reference_free(i32* %19)
  %21 = call i32 @git_buf_cstr(i32* %2)
  %22 = call i32 @git_path_isfile(i32 %21)
  %23 = call i32 @cl_assert_equal_i(i32 0, i32 %22)
  %24 = call i32 @git_buf_dispose(i32* %2)
  ret void
}

declare dso_local i32 @git_buf_joinpath(i32*, i32, i8*) #1

declare dso_local i32 @git_repository_path(i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_path_isfile(i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i8*) #1

declare dso_local i32 @git_reference_delete(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
